feat(web): 添加文件下载功能- 新增 DownloadFileResponseHeaderAdvice 类用于处理文件下载响应头- 添加 WindDownload 注解用于标记文件下载方法 - 创建 WindFileMediaType 枚举用于定义常见文件媒体类型